# MCP-Security-Scanner

./: .gitignore  IMPLEMENTATION_TIMELINE.md  LICENSE  README.md  mcp-scanner.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: analyzer-request.md  bug-report.md  config.yml  feature-request.md  implementation-task.md
.github/workflows/: ci.yml
docs/: GITHUB_ISSUES_IMPORT.md
src/: __init__.py
src/analyzers/: __init__.py  command_injection.py  mcp_permissions.py  secrets_detection.py
src/cli/: __init__.py  config.py  main.py
src/core/: __init__.py  registry.py  scanner.py  types.py
src/parsers/: __init__.py  python_parser.py
src/reporting/: __init__.py  generators.py
tests/: test_sample.py
